--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,4 +12,8 @@ html
     div(class='container-fluid')
       div(class='row')
         div(class='col-sm-12')
+          a(href='/logout') Logout
+          
+      div(class='row')
+        div(class='col-sm-12')
           block content
