--- a/views/login/index.pug
+++ b/views/login/index.pug
@@ -12,4 +12,4 @@
           input.form-control(type='password', name='password', placeholder='Password')
           label.checkbox
           |
-          button.btn.btn-lg.btn-primary.btn-block(type='submit') Login
+          button.btn.btn-lg.btn-primary.btn-block(type='submit') #{__('Login')}
